@@ -1,3 +1,4 @@
+	* exposed comparison operators on torrent_handle to python
 	* exposed alert error_codes to python
 	* fixed bug in announce_entry::next_announce_in and min_announce_in
 	* fixed sign issue in set_alert_mask signature
